Bump lsp4j.version from 0.20.1 to 0.21.0
Bumps `lsp4j.version` from 0.20.1 to 0.21.0.

Updates `org.eclipse.lsp4j.jsonrpc` from 0.20.1 to 0.21.0
- [Release notes](https://github.com/eclipse-lsp4j/lsp4j/releases)
- [Changelog](https://github.com/eclipse-lsp4j/lsp4j/blob/main/CHANGELOG.md)
- [Commits](https://github.com/eclipse-lsp4j/lsp4j/compare/v0.20.1...v0.21.0)

Updates `org.eclipse.lsp4j.websocket.jakarta` from 0.20.1 to 0.21.0
- [Release notes](https://github.com/eclipse-lsp4j/lsp4j/releases)
- [Changelog](https://github.com/eclipse-lsp4j/lsp4j/blob/main/CHANGELOG.md)
- [Commits](https://github.com/eclipse-lsp4j/lsp4j/compare/v0.20.1...v0.21.0)

Updates `org.eclipse.lsp4j` from 0.20.1 to 0.21.0
- [Release notes](https://github.com/eclipse-lsp4j/lsp4j/releases)
- [Changelog](https://github.com/eclipse-lsp4j/lsp4j/blob/main/CHANGELOG.md)
- [Commits](https://github.com/eclipse-lsp4j/lsp4j/compare/v0.20.1...v0.21.0)

---
updated-dependencies:
- dependency-name: org.eclipse.lsp4j:org.eclipse.lsp4j.jsonrpc
  dependency-type: direct:production
  update-type: version-update:semver-minor
- dependency-name: org.eclipse.lsp4j:org.eclipse.lsp4j.websocket.jakarta
  dependency-type: direct:production
  update-type: version-update:semver-minor
- dependency-name: org.eclipse.lsp4j:org.eclipse.lsp4j
  dependency-type: direct:production
  update-type: version-update:semver-minor
...

- Replace Google IOs File to built-in java.nio.files. Google IO is no
more provided through LSP4J and in fact Java 11 is providing a nice
alternative

Signed-off-by: dependabot[bot] <support@github.com>