@@ -20,6 +20,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.file.Files;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 
@@ -34,7 +35,6 @@ import org.junit.jupiter.api.io.TempDir;
 
 import com.github.cameltooling.lsp.internal.AbstractCamelLanguageServerTest;
 import com.github.cameltooling.lsp.internal.CamelLanguageServer;
-import com.google.common.io.Files;
 
 class CamelKModelineConfigOptionTest extends AbstractCamelLanguageServerTest {
 	
@@ -93,7 +93,7 @@ class CamelKModelineConfigOptionTest extends AbstractCamelLanguageServerTest {
 	 */
 	private File createFileStructureForTest(String modeline) throws IOException {
 		File camelKfile = new File(temporaryDir, "test.camelk.yaml");
-		Files.write(modeline.getBytes(), camelKfile);
+		Files.writeString(camelKfile.toPath() , modeline);
 		File aSiblingPropertyFile = new File(temporaryDir, "a.properties");
 		aSiblingPropertyFile.createNewFile();
 		
